--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-styled-components": "^2.0.11",
+    "intersection-observer": "^0.5.0",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.2.3"
+    "styled-components": "^3.2.3",
+    "typography": "^0.16.6",
+    "typography-theme-lincoln": "^0.15.11"
   },
   "keywords": [
     "gatsby"
